update(scss): fixed spacing

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -39,3 +39,11 @@
 td > code {
   white-space: nowrap;
 }
+
+ul.bx--list--unordered {
+  margin-top: 0;
+}
+
+.resource-card-group {
+  margin-top: $carbon--layout-03;
+}
